
[float]
===== Features

* Update <<opentelemetry-bridge>> support to `@opentelemetry/api` version 1.8.0.
* Add support for `tedious` versions 17 and 18. ({pull}3901[#3901], {pull}3911[#3911])

[float]
===== Bug fixes

* Fix instrumentation of mongodb to not break mongodb@6.4.0. Mongodb v6.4.0
  included changes that resulted in the APM agent's instrumentation breaking it.
  ({pull}3897[#3897])

[float]
===== Chores

* update `test-all-versions` to `v6.1.0` which supports include, exclude & mode
  in versions configuration. The `update-tav-versions.js` script is not necessary
  anymore.

[[release-notes-4.4.1]]
==== 4.4.1 - 2024/02/06

[float]
===== Bug fixes

* Add support for <<esm,instrumentation of ES module-using (ESM) code>> with
  Node.js versions matching `^18.19.0 || >=20.2.0`. Before this version of
  the APM agent, ESM instrumentation was only supported for some *earlier*
  Node.js versions. Changes in Node.js's ESM loader in v18.19.0 and v20 broke
  earlier ESM support. ({issues}3784[#3784], {pull}3844[#3844])


[[release-notes-4.4.0]]
==== 4.4.0 - 2024/01/12

*Known issue*: Using the APM agent's <<esm>> with Node.js *v18.19.0* is not
supported in this version. Upgrade to APM agent version v4.5.0 or later, or use
Node.js v18.18.1 or earlier.
See https://github.com/elastic/apm-agent-nodejs/issues/3784 for details.

[float]
===== Features

* Support `ELASTIC_APM_ACTIVATION_METHOD=K8S_ATTACH` (in addition to the
  current `K8S` value) to indicate the agent is being started by
  apm-k8s-attacher.  Newer releases of apm-k8s-attacher will be using this
  value (to have a common value used between APM agents).

[float]
===== Bug fixes

* Fix bug where `NODE_ENV` environment value was not used as a default for
  the <<environment>> config setting. The bug was introduced in v4.2.0.
  ({issues}3807[#3807])

* Improve Fastify instrumentation to no longer cause the https://fastify.dev/docs/latest/Reference/Warnings/#FSTDEP017[`FSTDEP017`]