@@ -160,6 +160,10 @@ function modNameFromModPath(modPath) {
   }
 }
 
+function normPathSeps(s) {
+  return path.sep !== '/' ? s.split(path.sep).join('/') : s;
+}
+
 /**
  * Holds the registered set of "patchers" (functions that monkey patch imported
  * modules) for a module path (`modPath`).
@@ -558,6 +562,10 @@ Instrumentation.prototype._restartHooks = function () {
       if (self._lambdaHandlerInfo?.modName === modPath) {
         modPath = self._lambdaHandlerInfo.filePath;
         version = process.env.AWS_LAMBDA_FUNCTION_VERSION || '';
+      } else {
+        // RITM returns `modPath` using native path separators. However,
+        // _patcherReg is keyed with '/' separators, so we need to normalize.
+        modPath = normPathSeps(modPath);
       }
 
       if (!self._patcherReg.has(modPath)) {
