@@ -6,11 +6,6 @@
 
 'use strict';
 
-if (process.env.GITHUB_ACTIONS === 'true' && process.platform === 'win32') {
-  console.log('# SKIP: GH Actions do not support docker services on Windows');
-  process.exit(0);
-}
-
 // Test Next.js instrumentation.
 //
 // This test roughly does the following:
